Adição do atributo 'BI' + correção das classes e seed + alteração da connection string.

--- a/PortalSocios/PortalSocios/Web.config
+++ b/PortalSocios/PortalSocios/Web.config
@@ -11,7 +11,7 @@
 
   <connectionStrings>
     <!-- v11.0 -->
-    <add name="LocalizacaoBD"
+    <add name="AppBD"
          connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\SociosBD.mdf;Integrated Security=True;"
          providerName="System.Data.SqlClient" />
   </connectionStrings>
