--- a/PortalSocios/PortalSocios/PortalSocios.csproj
+++ b/PortalSocios/PortalSocios/PortalSocios.csproj
@@ -170,6 +170,7 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Images\fotorc.jpg" />
     <Content Include="Content\Site.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -189,6 +190,7 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="Content\Images\socios.jpg" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
