--- a/PortalSocios/PortalSocios/Web.config
+++ b/PortalSocios/PortalSocios/Web.config
@@ -24,6 +24,11 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
+
+    <customErrors mode="On">
+      <error statusCode="404" redirect="~/Erros/NotFound"/>
+    </customErrors>
+
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
