--- a/PortalSocios/PortalSocios/Web.config
+++ b/PortalSocios/PortalSocios/Web.config
@@ -25,6 +25,8 @@
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
 
+    <!-- redireciona para uma página de erro, para o caso do erro 404 -->
+    
     <customErrors mode="On">
       <error statusCode="404" redirect="~/Erros/NotFound"/>
     </customErrors>
