--- a/PortalSocios/PortalSocios/PortalSocios.csproj
+++ b/PortalSocios/PortalSocios/PortalSocios.csproj
@@ -171,6 +171,7 @@
     <Content Include="Content\bootstrap-datepicker3.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Imagens\adeptos.png" />
     <Content Include="Content\Imagens\construcao.png" />
     <Content Include="Content\Imagens\erro.png" />
     <Content Include="Content\Imagens\fotolei.png" />
